syntax = "proto3";

package content_service;

option go_package = "genproto/content_service";

import "google/protobuf/empty.proto"; // Google Empty protobuff faylini import qilish

message CreateContentReq {
    string title = 1;
}

message GetByIdReq {
    string id = 1;
}

message GetListReq {
    int32 limit = 1;
    int32 offset = 2;
}


message Content {
    string id = 1;
    string title = 2;
    string created_at = 3;
}


message GetListResp {
    repeated Content contents = 1;
    int32 count = 2;
}

message UpdateContentReq {
    string id = 1;
    string title = 2;
}

message DeleteContentReq {
    string id = 1;
}

service ContentService {
    rpc CreateContent (CreateContentReq) returns (Content);
    rpc GetContentList (GetListReq) returns (GetListResp);
    rpc GetContentById (GetByIdReq) returns (Content);
    rpc UpdateContent (UpdateContentReq) returns (google.protobuf.Empty);
    rpc DeleteContent (DeleteContentReq) returns (google.protobuf.Empty);
}
